--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependencies>
+        <!-- 롬복 라이브러리 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+        </dependency>
+        <!-- 다른라이브러리 추가 기능-->
+    </dependencies>
+
+
 </project>
